noinst_LIBRARIES = libbase.a

libbase_a_SOURCES = lineparser.cpp messenger.cpp question.cpp questionset.cpp quiz.cpp quiz_io.cpp segment.cpp session.cpp sysfunc.cpp team.cpp

noinst_HEADERS = lineparser.h messenger.h question.h questionset.h quiz.h segment.h session.h sysfunc.h team.h

INCLUDES = -I$(top_srcdir)/src -I../ @GUI_CFLAGS@
